# ShieldFlow-

./: .gitignore  BUILD_STATUS.md  CONTRIBUTING.md  DEMO.md  LICENSE  MEMORY.md  README.md  SETUP_COMPLETE.md  SETUP_SUMMARY.txt  package.json  test_payroll.csv
circuits/: Nargo.toml
circuits/src/: main.nr
contracts/: Cargo.toml  DEPLOYMENT.md
contracts/ComplianceVerifier/: Cargo.toml
contracts/ComplianceVerifier/src/: lib.rs
contracts/NullifierRegistry/: Cargo.toml
contracts/NullifierRegistry/src/: lib.rs
contracts/ShieldFlowPool/: Cargo.toml
contracts/ShieldFlowPool/src/: lib.rs
docs/: ARCHITECTURE.md  MVP_TASKS.md
frontend/: .env.local.example  index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CSVUpload.tsx  Dashboard.tsx  Navigation.tsx
frontend/src/types/: index.ts
frontend/src/utils/: contracts.ts  csv.ts  noir.ts  stellar.ts
